--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-pdo": "*",
         "felixkiss/uniquewith-validator": "^3.4",
         "flipbox/lumen-generator": "^8.2",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "irazasyed/larasupport": "^1.7",
         "laravel/lumen-framework": "^8.0",
