--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "khbd/laravel-sms-bd": "^1.3",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
-        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
+        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
