Done added course enrollment with RabbitMQ

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
     "keywords": ["framework", "laravel", "lumen"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "http://github.com/anisurrahman072/laravel-queue-rabbitmq"
+        }
+    ],
     "require": {
         "php": "^8.0",
         "ext-json": "*",
@@ -17,7 +23,7 @@
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
         "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0",
-        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.3"
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "dev-feat/limit-retry-mechanism-added"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
