--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "irazasyed/larasupport": "^1.7",
-        "khbd/laravel-sms-bd": "^1.3",,,
+        "khbd/laravel-sms-bd": "^1.3",
         "ixudra/curl": "6.*",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
