--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
         "php": "^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
+        "doctrine/dbal": "^3.2",
         "felixkiss/uniquewith-validator": "^3.4",
         "flipbox/lumen-generator": "^8.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "irazasyed/larasupport": "^1.7",
-        "khbd/laravel-sms-bd": "^1.3",
         "ixudra/curl": "6.*",
+        "khbd/laravel-sms-bd": "^1.3",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
         "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
