--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "irazasyed/larasupport": "^1.7",
+        "khbd/laravel-wso2-identity-api-user": "^0.0.3",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
         "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "dev-feat/get-exchange_info-from-queue-config"
-
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
