--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -25,7 +25,7 @@ variables:
   serviceTargetPort: 80
 
   #app buil image
-  imageRepository: kalyan31.jfrog.io/nise3-youth-management-api-docker/nise3-youth-management-api-docker
+  imageRepository: registry.bus-staging.softbdltd.com/nise3-cms-api-service
 
 
   #auto scaling config
