--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -25,8 +25,8 @@ variables:
   serviceTargetPort: 80
 
   #app buil image
-  imageRepository: registry.bus-staging.softbdltd.com/nise3-youth-management-api-service
-
+  #imageRepository: registry.bus-staging.softbdltd.com/nise3-youth-management-api-service
+  imageRepository: rhysha/nise3-youth-management-api-service
 
   #auto scaling config
   #autoScalingEnabled: 0
