1) deployment.yaml file is updated for deployment 2) .env.example is updated for deployment 3) values.yaml is updated for deployment

--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -23,27 +23,29 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: APP_ENV
-              value: "{{ .Values.variables.APP_ENV }}"
-            - name: APP_DEBUG
-              value: "{{ .Values.variables.APP_DEBUG }}"
-            - name: APP_URL
-              value: "{{ .Values.variables.APP_URL }}"
-            - name: DB_HOST
-              value: "{{ .Values.variables.DB_HOST }}"
-            - name: DB_PORT
-              value: "{{ .Values.variables.DB_PORT }}"
-            - name: DB_DATABASE
-              value: "{{ .Values.variables.DB_DATABASE }}"
-            - name: DB_USERNAME
-              value: "{{ .Values.variables.DB_USERNAME }}"
-            - name: DB_PASSWORD
-              value: {{ .Values.variables.DB_PASSWORD | default "" | quote }}
+              { { if eq .Values.variables.APP_ENV "LOCAL" } }
+              { { - range $key, $val := .Values.variables.DEV } }
+              - name: { { $key } }
+                value: { { $val | quote } }
+              { { - end } }
+              {{end}}
+              { { if eq .Values.variables.APP_ENV "STAGING" } }
+              { { - range $key, $val := .Values.variables.STAGING } }
+              - name: { { $key } }
+                value: { { $val | quote } }
+              { { - end } }
+              {{end}}
+              { { if eq .Values.variables.APP_ENV "PRODUCTION" } }
+              { { - range $key, $val := .Values.variables.PRODUCTION } }
+              - name: { { $key } }
+                value: { { $val | quote } }
+              { { - end } }
+              {{end}}
           lifecycle:
             postStart:
               exec:
                 command:
-                  - "sh" 
+                  - "sh"
                   - "-c"
                   - >
                     mv /app/.env.example /app/.env;
@@ -56,6 +58,16 @@ spec:
                     sed -i "s/DB_DATABASE=.*$/DB_DATABASE=$DB_DATABASE/g" /app/.env;
                     sed -i "s/DB_USERNAME=.*$/DB_USERNAME=$DB_USERNAME/g" /app/.env;
                     sed -i "s/DB_PASSWORD=.*$/DB_PASSWORD=$DB_PASSWORD/g" /app/.env;
+
+                    sed -i "s/RABBITMQ_HOST=.*$/RABBITMQ_HOST=$RABBITMQ_HOST/g" /app/.env;
+                    sed -i "s/RABBITMQ_PORT=.*$/RABBITMQ_PORT=$RABBITMQ_PORT/g" /app/.env;
+                    sed -i "s/RABBITMQ_VHOST=.*$/RABBITMQ_VHOST=$RABBITMQ_VHOST/g" /app/.env;
+                    sed -i "s/RABBITMQ_USER=.*$/RABBITMQ_USER=$RABBITMQ_USER/g" /app/.env;
+                    sed -i "s/RABBITMQ_PASSWORD=.*$/RABBITMQ_PASSWORD=$RABBITMQ_PASSWORD/g" /app/.env;
+
+                    sed -i "s/WSO2_IDP_BASE_URL=.*$/WSO2_IDP_BASE_URL=$WSO2_IDP_BASE_URL/g" /app/.env;
+                    sed -i "s/WSO2_IDP_USERNAME=.*$/WSO2_IDP_USERNAME=$WSO2_IDP_USERNAME/g" /app/.env;
+                    sed -i "s/WSO2_IDP_PASSWORD=.*$/WSO2_IDP_PASSWORD=$WSO2_IDP_PASSWORD/g" /app/.env;
                     chown -R www-data:www-data /app;
                     cd /app; php artisan migrate;
       imagePullSecrets:
