1) Database Hostname,username,databaseName, and password change to values.yaml

--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -45,11 +45,12 @@ variables:
     APP_ENV: "local"
     APP_DEBUG: "false"
     APP_URL: "youthapi.bus.softbd.xyz"
-    DB_HOST: 172.17.177.79
+
+    DB_HOST: 192.168.10.95
     DB_PORT: "3306"
     DB_DATABASE: youth
-    DB_USERNAME: n3_youth
-    DB_PASSWORD: "kvx7V3Y^7"
+    DB_USERNAME: nise3
+    DB_PASSWORD: "nise3"
 
     RABBITMQ_HOST: "jaguar.rmq.cloudamqp.com"
     RABBITMQ_PORT: "5672"
