--- a/deploy/templates/ingress.yaml
+++ b/deploy/templates/ingress.yaml
@@ -1,19 +1,39 @@
+{{ if .Values.variables.enableEngress }}
+
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
   name: "{{ .Chart.Name }}-ingress"
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: {{ .Values.variables.ingressClusterIssuer }}
     kubernetes.io/ingress.class: nginx
+    {{ if .Values.variables.enableEngress }}
     kubernetes.io/tls-acme: 'true'
+    {{end}}
     nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
 spec:
   tls:
     - hosts:
-        - "{{ .Values.variables.hostName }}"
+        {{ if eq .Values.variables.APP_ENV "LOCAL" }}
+        - "{{ .Values.variables.DEV.APP_URL }}"
+        {{end}}
+        {{ if eq .Values.variables.APP_ENV "STAGING" }}
+        - "{{ .Values.variables.STAGING.APP_URL }}"
+        {{end}}
+        {{ if eq .Values.variables.APP_ENV "PRODUCTION" }}
+        - "{{ .Values.variables.PRODUCTION.APP_URL }}"
+        {{end}}
       secretName: "{{ .Chart.Name }}-secret"
   rules:
-    - host: "{{ .Values.variables.hostName }}"
+        {{ if eq .Values.variables.APP_ENV "LOCAL" }}
+    - host: "{{ .Values.variables.DEV.APP_URL }}"
+        {{end}}
+        {{ if eq .Values.variables.APP_ENV "STAGING" }}
+    - host: "{{ .Values.variables.STAGING.APP_URL }}"
+        {{end}}
+        {{ if eq .Values.variables.APP_ENV "PRODUCTION" }}
+    - host: "{{ .Values.variables.PRODUCTION.APP_URL }}"
+        {{end}}
       http:
         paths:
           - path: /
@@ -23,3 +43,4 @@ spec:
                 name: {{ .Chart.Name }}
                 port:
                   name: http
+{{end}}
