--- a/deploy/Chart.yaml
+++ b/deploy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: nise3-youth-management-api-service
+name: nise3-youth
 description: nise3-youth-management-api-service
 
 # A chart can be either an 'application' or a 'library' chart.
