--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -7,9 +7,18 @@ variables:
 
   hostName: youthapi.bus.softbd.xyz
 
+    # if values is false, then creating ingress will be escape
+  enableEngress: false
+
+  # ingress cluster-issuer class
+  ingressClusterIssuer: "k-issuer"
+
+    # is lts acme, value is boolean
+  ltsAcme: false
+
   # app version, changing version will auto deploy the app to current version
 
-  imageAppVersion: "2.0.3"
+  imageAppVersion: "2.0.4"
 
   # increase this when you need scale up
   replicaCount: 1
@@ -25,8 +34,7 @@ variables:
   serviceTargetPort: 80
 
   #app buil image
-  #imageRepository: registry.bus-staging.softbdltd.com/nise3-youth-management-api-service
-  imageRepository: rhysha/nise3-youth-management-api-service
+  imageRepository: registry.nise3.xyz/nise3-youth-management-api-service
 
   #auto scaling config
   #autoScalingEnabled: 0
@@ -41,27 +49,38 @@ variables:
 
 
   # application config
-  APP_ENV: "STAGING"
+  # APP_ENV environment available values are DEV/STAGING/PRODUCTION
+  APP_ENV: "DEV"
   DEV:
     APP_ENV: "local"
     APP_DEBUG: "false"
-    APP_URL: "youthapi.bus.softbd.xyz"
+    APP_URL: "core-dev.nise3.xyz"
 
     DB_HOST: 192.168.10.95
     DB_PORT: "3306"
     DB_DATABASE: youth
     DB_USERNAME: nise3
-    DB_PASSWORD: "nise3"
+    DB_PASSWORD: nise3
 
-    RABBITMQ_HOST: "jaguar.rmq.cloudamqp.com"
+    RABBITMQ_HOST: "rabbitmqcluster"
     RABBITMQ_PORT: "5672"
-    RABBITMQ_VHOST: "aeihxlmw"
-    RABBITMQ_USER: "aeihxlmw"
-    RABBITMQ_PASSWORD: "uC1-78rvplV09_2sVy5vEnLwG-iUdiWJ"
+    RABBITMQ_VHOST: "/"
+    RABBITMQ_USER: "default_user_8JE9yWDb4fHdn35Ua9w"
+    RABBITMQ_PASSWORD: "OvK7CUJOlZHfLWbYeTjdTlbdG2GHfr1Q"
 
-    WSO2_IDP_BASE_URL : "https://identity.bus-staging.softbdltd.com"
-    WSO2_IDP_USERNAME : admin
-    WSO2_IDP_PASSWORD : Iadmin
+    WSO2_IDP_BASE_URL: "https://identity-dev.nise3.xyz"
+    WSO2_IDP_BASE_USER_URL: "https://identity-dev.nise3.xyz/scim2/Users"
+    WSO2_IDP_USERNAME: admin
+    WSO2_IDP_PASSWORD: admin
+    WSO2_IDP_CLIENT_KEY: "u13j1BX4H7VuuutmtkbI5z27_5Qa"
+    WSO2_IDP_CLIENT_SECRET: "Sygpg0CyFLLsXxO7ExytffHw7fwa"
+
+    CORE_API_BASE_URL: "http://nise3-core.default/api/v1/"
+    YOUTH_API_BASE_URL: "http://nise3-youth.default/api/v1/"
+    TSP_API_BASE_URL: "http://nise3-institute.default/api/v1/"
+    INDUSTRY_API_BASE_URL: "http://nise3-org.default/api/v1/"
+    CMS_API_BASE_URL: "http://nise3-cms.default/api/v1/"
+    MAIL_API_BASE_URL: "http://nise3-mail.default/api/v1/"
 
   STAGING:
     APP_ENV: "local"
