--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "github-oauth": {
+            "github.com": "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"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
