--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -60,11 +60,19 @@ spec:
                     sed -i "s/DB_USERNAME=.*$/DB_USERNAME=$DB_USERNAME/g" /app/.env;
                     sed -i "s/DB_PASSWORD=.*$/DB_PASSWORD=$DB_PASSWORD/g" /app/.env;
 
+                    sed -i "s/REDIS_HOST=.*$/REDIS_HOST=$REDIS_HOST/g" /app/.env;
+                    sed -i "s/REDIS_PASSWORD=.*$/REDIS_PASSWORD=$REDIS_PASSWORD/g" /app/.env;
+                    sed -i "s/REDIS_PORT=.*$/REDIS_PORT=$REDIS_PORT/g" /app/.env;
+
                     sed -i "s/RABBITMQ_HOST=.*$/RABBITMQ_HOST=$RABBITMQ_HOST/g" /app/.env;
                     sed -i "s/RABBITMQ_PORT=.*$/RABBITMQ_PORT=$RABBITMQ_PORT/g" /app/.env;
                     sed -i "s/RABBITMQ_VHOST=.*$/RABBITMQ_VHOST=$RABBITMQ_VHOST/g" /app/.env;
                     sed -i "s/RABBITMQ_USER=.*$/RABBITMQ_USER=$RABBITMQ_USER/g" /app/.env;
                     sed -i "s/RABBITMQ_PASSWORD=.*$/RABBITMQ_PASSWORD=$RABBITMQ_PASSWORD/g" /app/.env;
+
+                    sed -i "s/WSO2_APIM_BASE_URL=.*$/WSO2_APIM_BASE_URL=$WSO2_APIM_BASE_URL/g" /app/.env;
+                    sed -i "s/WSO2_APIM_CLIENT_KEY=.*$/WSO2_APIM_CLIENT_KEY=$WSO2_APIM_CLIENT_KEY/g" /app/.env;
+                    sed -i "s/WSO2_APIM_CLIENT_SECRET=.*$/WSO2_APIM_CLIENT_SECRET=$WSO2_APIM_CLIENT_SECRET/g" /app/.env;
 
                     sed -i "s/WSO2_IDP_BASE_URL=.*$/WSO2_IDP_BASE_URL=$WSO2_IDP_BASE_URL/g" /app/.env;
                     sed -i "s/WSO2_IDP_BASE_USER_URL=.*$/WSO2_IDP_BASE_USER_URL=$WSO2_IDP_BASE_USER_URL/g" /app/.env;
