--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -5,7 +5,7 @@
 
 variables:
 
-  hostName: youthapi.bus.softbd.xyz
+  hostName: youthapi-dev.nise3.xyz
 
     # if values is false, then creating ingress will be escape
   enableEngress: false
@@ -18,7 +18,7 @@ variables:
 
   # app version, changing version will auto deploy the app to current version
 
-  imageAppVersion: "2.0.4"
+  imageAppVersion: "2.0.5"
 
   # increase this when you need scale up
   replicaCount: 1
@@ -54,19 +54,27 @@ variables:
   DEV:
     APP_ENV: "local"
     APP_DEBUG: "false"
-    APP_URL: "core-dev.nise3.xyz"
+    APP_URL: "youthapi-dev.nise3.xyz"
 
-    DB_HOST: 192.168.10.95
-    DB_PORT: "3306"
+    DB_HOST: "db-service.default"
+    DB_PORT: 3306
     DB_DATABASE: youth
-    DB_USERNAME: nise3
-    DB_PASSWORD: nise3
+    DB_USERNAME: core3
+    DB_PASSWORD: core3
 
-    RABBITMQ_HOST: "rabbitmqcluster"
+    REDIS_HOST: "redis.redis"
+    REDIS_PASSWORD: "k?admin"
+    REDIS_PORT: 6379
+
+    RABBITMQ_HOST: "rabbitmqcluster.default"
     RABBITMQ_PORT: "5672"
     RABBITMQ_VHOST: "/"
     RABBITMQ_USER: "default_user_8JE9yWDb4fHdn35Ua9w"
     RABBITMQ_PASSWORD: "OvK7CUJOlZHfLWbYeTjdTlbdG2GHfr1Q"
+
+    WSO2_APIM_BASE_URL: "https://apim-dev.nise3.xyz"
+    WSO2_APIM_CLIENT_KEY: "YB8yDxCc2eDmTeV_DQix9E17dQQa"
+    WSO2_APIM_CLIENT_SECRET: "dnZiGK34AvPErTZxpxzmkf0RznUa"
 
     WSO2_IDP_BASE_URL: "https://identity-dev.nise3.xyz"
     WSO2_IDP_BASE_USER_URL: "https://identity-dev.nise3.xyz/scim2/Users"
