--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -18,7 +18,7 @@ variables:
 
   # app version, changing version will auto deploy the app to current version
 
-  imageAppVersion: "2.0.5"
+  imageAppVersion: "2.0.6"
 
   # increase this when you need scale up
   replicaCount: 1
@@ -58,7 +58,7 @@ variables:
 
     DB_HOST: "db-service.default"
     DB_PORT: 3306
-    DB_DATABASE: youth
+    DB_DATABASE: nise_youth
     DB_USERNAME: core3
     DB_PASSWORD: core3
 
