git flow and deployment

--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -58,7 +58,7 @@ variables:
 
     DB_HOST: "db-service.default"
     DB_PORT: 3306
-    DB_DATABASE: youth
+    DB_DATABASE: nise_youth
     DB_USERNAME: core3
     DB_PASSWORD: core3
 
