--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -1,5 +1,8 @@
 variables:
 
+  #app build image
+  enableImageBuild: "false"
+  
   # app version, changing version will auto deploy the app to current version
   imageAppVersion: "2.0.5"
 
