--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -1,7 +1,7 @@
 variables:
 
   #app build image
-  enableImageBuild: "true"
+  enableImageBuild: "false"
 
   # app version, changing version will auto deploy the app to current version
   imageAppVersion: "2.0.6"
